--- a/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 stages:
   - Test
-  - Report
   - Pact-publish
+  - Report
   - Pact-check
   - Build
   - Deploy
@@ -45,7 +45,7 @@ sentry_release:
       sentry-cli releases set-commits $VERSION_REF --auto;
       sentry-cli releases finalize $VERSION_REF"
 
-test:
+.test:
   stage: Test
   image: docker:20
   services:
@@ -54,7 +54,13 @@ test:
     FRONTEND_IMAGE_NAME: "gitlabci_{{cookiecutter.project_slug}}_frontend"
     FRONTEND_IMAGE_TAG: "$CI_JOB_NAME-$CI_JOB_ID"
     FRONTEND_CONTAINER_NAME: "${CI_PROJECT_PATH_SLUG}-${CI_JOB_NAME}-${CI_JOB_ID}_frontend"
+
+test-with-pacts:
+  extends: .test
+  rules:
+    - if: $PACT_BROKER_BASE_URL && $PACT_ENABLED
   script:
+    - echo $CI_COMMIT_TAG $CI_COMMIT_BRANCH
     - >
       docker build
       --tag=$FRONTEND_IMAGE_NAME:$FRONTEND_IMAGE_TAG
@@ -73,16 +79,27 @@ test:
       - pacts
     expire_in: 1 day
 
-pages:
-  stage: Report
-  image: busybox
+test:
+  extends: .test
+  rules:
+    - if: $PACT_ENABLED == null
   script:
-    - mv coverage/lcov-report/* public
+    - echo $CI_COMMIT_TAG $CI_COMMIT_BRANCH
+    - >
+      docker build
+      --tag=$FRONTEND_IMAGE_NAME:$FRONTEND_IMAGE_TAG
+      --file=docker/remote.Dockerfile
+      --target=test .
+    - docker run --name=$FRONTEND_CONTAINER_NAME $FRONTEND_IMAGE_NAME:$FRONTEND_IMAGE_TAG
+    - docker cp $FRONTEND_CONTAINER_NAME:/temp/coverage .
+  after_script:
+    - docker stop $FRONTEND_CONTAINER_NAME
+    - docker container rm $FRONTEND_CONTAINER_NAME
+  coverage: /All files[^|]*\|[^|]*\s+([\d\.]+)/
   artifacts:
     paths:
-      - public
-  dependencies:
-    - test
+      - coverage
+    expire_in: 1 day
 
 publish:
   stage: Pact-publish
@@ -90,6 +107,10 @@ publish:
     name: docker:20
   services:
     - docker:20-dind
+  rules:
+    - if: $PACT_BROKER_BASE_URL && $PACT_ENABLED
+      changes:
+        - '__tests__/pact/**/*'
   before_script:
     - if [ "$CI_COMMIT_BRANCH" ]; then PACT_CONSUMER_TAG="branch:$CI_COMMIT_BRANCH"; else PACT_CONSUMER_TAG="tag:$CI_COMMIT_TAG"; fi
   script:
@@ -103,7 +124,20 @@ publish:
       --consumer-app-version=$VERSION_REF
       --tag=$PACT_CONSUMER_TAG
   dependencies:
-    - test
+    - test-with-pacts
+
+pages:
+  stage: Report
+  image: busybox
+  script:
+    - mv coverage/lcov-report/* public
+  artifacts:
+    paths:
+      - public
+  rules:
+    - if: $CI_COMMIT_TAG
+      when: never
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
 
 .can-i-deploy:
   stage: Pact-check
@@ -127,24 +161,30 @@ publish:
 
 can-i-deploy_development:
   extends: .can-i-deploy
-  variables:
-    DEPLOY_ENV: development
-  only:
-    - develop
+  rules:
+    - if: $CI_COMMIT_BRANCH == "develop" && $CI_JOB_TRIGGERED != "true" && $PACT_BROKER_BASE_URL && $PACT_ENABLED
+      changes:
+        - '__tests__/pact/**/*'
+      variables:
+        DEPLOY_ENV: development
 
 can-i-deploy_integration:
   extends: .can-i-deploy
-  variables:
-    DEPLOY_ENV: integration
-  only:
-    - master
+  rules:
+    - if: $CI_COMMIT_BRANCH == "master" && $CI_COMMIT_TAG == null && $CI_JOB_TRIGGERED != "true" && $PACT_BROKER_BASE_URL && $PACT_ENABLED
+      changes:
+        - '__tests__/pact/**/*'
+      variables:
+        DEPLOY_ENV: integration
 
 can-i-deploy_production:
   extends: .can-i-deploy
-  variables:
-    DEPLOY_ENV: production
-  only:
-    - tags
+  rules:
+    - if: $CI_COMMIT_BRANCH == "master" && $CI_COMMIT_TAG && $CI_JOB_TRIGGERED != "true" && $PACT_BROKER_BASE_URL && $PACT_ENABLED
+      changes:
+        - '__tests__/pact/**/*'
+      variables:
+        DEPLOY_ENV: production
 
 build:
   stage: Build
@@ -168,37 +208,35 @@ build:
     - docker push $CI_REGISTRY/$CI_PROJECT_PATH:$VERSION_REF
   after_script:
     - docker logout $CI_REGISTRY
-  only:
-    - develop
-    - master
-    - tags
+  rules:
+    - if: ($CI_COMMIT_BRANCH == "develop" ||  $CI_COMMIT_BRANCH == "master" ||  $CI_COMMIT_TAG) && $CI_JOB_TRIGGERED != "true"
 
 .development:
-  variables:
-    DEPLOY_ENVIRONMENT: development
   environment:
     name: Development
     url: https://dev.{{cookiecutter.project_slug}}.com
-  only:
-    - develop
+  rules:
+    - if: $CI_COMMIT_BRANCH == "develop" && $CI_JOB_TRIGGERED != "true"
+      variables:
+        DEPLOY_ENVIRONMENT: development
 
 .integration:
-  variables:
-    DEPLOY_ENVIRONMENT: integration
   environment:
     name: Integration
     url: https://test.{{cookiecutter.project_slug}}.com
-  only:
-    - master
+  rules:
+    - if: $CI_COMMIT_BRANCH == "master" && $CI_JOB_TRIGGERED != "true"
+      variables:
+        DEPLOY_ENVIRONMENT: integration
 
 .production:
-  variables:
-    DEPLOY_ENVIRONMENT: production
   environment:
     name: Production
     url:  https://www.{{cookiecutter.project_slug}}.com
-  only:
-    - tags
+  rules:
+    - if: $CI_COMMIT_TAG && $CI_JOB_TRIGGERED != "true"
+      variables:
+        DEPLOY_ENVIRONMENT: production
 
 .deploy-base:
   stage: Deploy
@@ -242,22 +280,33 @@ deploy_production:
   extends: .deploy-base
   before_script:
     - export DEPLOY_VERSION=$VERSION_BEFORE_REF
-  when: manual
 
 rollback_development:
   extends:
     - .development
     - .rollback
+  rules:
+    - if: $CI_COMMIT_BRANCH == "develop" && $CI_JOB_TRIGGERED != "true"
+      when: manual
+      allow_failure: true
 
 rollback_integration:
   extends:
     - .integration
     - .rollback
+  rules:
+    - if: $CI_COMMIT_BRANCH == "master" && $CI_JOB_TRIGGERED != "true"
+      when: manual
+      allow_failure: true
 
 rollback_production:
   extends:
     - .production
     - .rollback
+  rules:
+    - if: $CI_COMMIT_TAG && $CI_JOB_TRIGGERED != "true"
+      when: manual
+      allow_failure: true
 
 .create-version-tag:
   image:
@@ -265,11 +314,13 @@ rollback_production:
   services:
     - docker:20-dind
   stage: Pact-tag
-  except:
-    - triggers
 
 create-version-tag_development:
   extends: .create-version-tag
+  rules:
+    - if: $CI_COMMIT_BRANCH == "develop" && $CI_JOB_TRIGGERED != "true" && $PACT_BROKER_BASE_URL && $PACT_ENABLED
+      changes:
+        - '__tests__/pact/**/*'
   script:
     - >
       docker run --rm
@@ -280,11 +331,13 @@ create-version-tag_development:
       --pacticipant $PACT_CONSUMER_NAME
       --version $VERSION_REF
       --tag "env:development"
-  only:
-    - develop
 
 create-version-tag_integration:
   extends: .create-version-tag
+  rules:
+    - if: $CI_COMMIT_BRANCH == "master" && $CI_JOB_TRIGGERED != "true" && $PACT_BROKER_BASE_URL && $PACT_ENABLED
+      changes:
+        - '__tests__/pact/**/*'
   script:
     - >
       docker run --rm
@@ -295,11 +348,13 @@ create-version-tag_integration:
       --pacticipant $PACT_CONSUMER_NAME
       --version $VERSION_REF
       --tag "env:integration"
-  only:
-    - master
 
 create-version-tag_production:
   extends: .create-version-tag
+  rules:
+    - if: $CI_COMMIT_TAG && $CI_JOB_TRIGGERED != "true" && $PACT_BROKER_BASE_URL && $PACT_ENABLED
+      changes:
+        - '__tests__/pact/**/*'
   script:
     - >
       docker run --rm
@@ -310,8 +365,6 @@ create-version-tag_production:
       --pacticipant $PACT_CONSUMER_NAME
       --version $VERSION_REF
       --tag "env:production"
-  only:
-    - tags
 
 .sentry_deploy_success:
   stage: Sentry
