--- a/{{cookiecutter.project_dirname}}/package.json
+++ b/{{cookiecutter.project_dirname}}/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
     "@sentry/nextjs": "^6.13.3",
-    "axios": "^0.22.0",
+    "axios": "^0.23.0",
     "basic-auth": "^2.0.1",
     "express": "^4.17.1",
     "next": "^11.1.2",
@@ -31,24 +31,24 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^11.1.2",
-    "@pact-foundation/pact": "^9.16.3",
+    "@pact-foundation/pact": "^9.16.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
     "@types/basic-auth": "^1.1.3",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
-    "@types/node": "^16.10.3",
-    "@types/react": "^17.0.27",
+    "@types/node": "^16.11.1",
+    "@types/react": "^17.0.30",
     "@types/react-redux": "^7.1.19",
     "@types/styled-components": "^5.1.15",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "axios-mock-adapter": "^1.20.0",
     "babel-plugin-styled-components": "^1.13.2",
-    "eslint": "^7.32.0",
+    "eslint": "^8.0.1",
     "eslint-config-next": "^11.1.2",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^5.1.0",
@@ -57,7 +57,7 @@
     "jest": "^27.2.5",
     "jest-pact": "^0.9.1",
     "prettier": "^2.4.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.4"
   },
   "prettier": {
     "arrowParens": "avoid",
@@ -106,6 +106,7 @@
       "@typescript-eslint/no-unused-vars": [
         "warn",
         {
+          "argsIgnorePattern": "^_",
           "varsIgnorePattern": "^_"
         }
       ]
