--- a/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
@@ -29,7 +29,7 @@ sentry_release:
   services:
     - docker:20-dind
   rules:
-    - if: ($CI_COMMIT_BRANCH == "develop" ||  $CI_COMMIT_BRANCH == "master" || $CI_COMMIT_TAG) && $CI_JOB_TRIGGERED != "true" && $SENTRY_DSN
+    - if: $SENTRY_DSN && ($CI_COMMIT_BRANCH == "develop" ||  $CI_COMMIT_BRANCH == "master" || $CI_COMMIT_TAG) && $CI_JOB_TRIGGERED != "true"
   script:
     - RELEASE_START=$(date +%s)
     - >
@@ -45,7 +45,7 @@ sentry_release:
       sentry-cli releases set-commits $VERSION_REF --auto;
       sentry-cli releases finalize $VERSION_REF"
 
-.test:
+test:
   stage: Test
   image: docker:20
   services:
@@ -54,11 +54,8 @@ sentry_release:
     FRONTEND_IMAGE_NAME: "gitlabci_{{cookiecutter.project_slug}}_frontend"
     FRONTEND_IMAGE_TAG: "$CI_JOB_NAME-$CI_JOB_ID"
     FRONTEND_CONTAINER_NAME: "${CI_PROJECT_PATH_SLUG}-${CI_JOB_NAME}-${CI_JOB_ID}_frontend"
-
-test-with-pacts:
-  extends: .test
   rules:
-    - if: $PACT_BROKER_BASE_URL && $PACT_ENABLED == 'true'
+    - if: $PACT_ENABLED == "true" && $PACT_BROKER_BASE_URL
   script:
     - echo $CI_COMMIT_TAG $CI_COMMIT_BRANCH
     - >
@@ -68,7 +65,7 @@ test-with-pacts:
       --target=test .
     - docker run --name=$FRONTEND_CONTAINER_NAME $FRONTEND_IMAGE_NAME:$FRONTEND_IMAGE_TAG
     - docker cp $FRONTEND_CONTAINER_NAME:/temp/coverage .
-    - docker cp $FRONTEND_CONTAINER_NAME:/temp/__tests__/pacts .
+    - if [ "$PACT_ENABLED" == true ]; then docker cp $FRONTEND_CONTAINER_NAME:/temp/__tests__/pacts .; fi
   after_script:
     - docker stop $FRONTEND_CONTAINER_NAME
     - docker container rm $FRONTEND_CONTAINER_NAME
@@ -79,28 +76,6 @@ test-with-pacts:
       - pacts
     expire_in: 1 day
 
-test:
-  extends: .test
-  rules:
-    - if: $PACT_ENABLED != 'true'
-  script:
-    - echo $CI_COMMIT_TAG $CI_COMMIT_BRANCH
-    - >
-      docker build
-      --tag=$FRONTEND_IMAGE_NAME:$FRONTEND_IMAGE_TAG
-      --file=docker/remote.Dockerfile
-      --target=test .
-    - docker run --name=$FRONTEND_CONTAINER_NAME $FRONTEND_IMAGE_NAME:$FRONTEND_IMAGE_TAG
-    - docker cp $FRONTEND_CONTAINER_NAME:/temp/coverage .
-  after_script:
-    - docker stop $FRONTEND_CONTAINER_NAME
-    - docker container rm $FRONTEND_CONTAINER_NAME
-  coverage: /All files[^|]*\|[^|]*\s+([\d\.]+)/
-  artifacts:
-    paths:
-      - coverage
-    expire_in: 1 day
-
 publish:
   stage: Pact-publish
   image:
@@ -108,9 +83,7 @@ publish:
   services:
     - docker:20-dind
   rules:
-    - if: $PACT_BROKER_BASE_URL && $PACT_ENABLED == 'true'
-      changes:
-        - '__tests__/pact/**/*'
+    - if: $PACT_ENABLED == "true" && $PACT_BROKER_BASE_URL
   before_script:
     - if [ "$CI_COMMIT_BRANCH" ]; then PACT_CONSUMER_TAG="branch:$CI_COMMIT_BRANCH"; else PACT_CONSUMER_TAG="tag:$CI_COMMIT_TAG"; fi
   script:
@@ -124,20 +97,18 @@ publish:
       --consumer-app-version=$VERSION_REF
       --tag=$PACT_CONSUMER_TAG
   dependencies:
-    - test-with-pacts
+    - test
 
 pages:
   stage: Report
   image: busybox
+  rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
   script:
     - mv coverage/lcov-report/* public
   artifacts:
     paths:
       - public
-  rules:
-    - if: $CI_COMMIT_TAG
-      when: never
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
 
 .can-i-deploy:
   stage: Pact-check
@@ -162,27 +133,21 @@ pages:
 can-i-deploy_development:
   extends: .can-i-deploy
   rules:
-    - if: $CI_COMMIT_BRANCH == "develop" && $CI_JOB_TRIGGERED != "true" && $PACT_BROKER_BASE_URL && $PACT_ENABLED == 'true'
-      changes:
-        - '__tests__/pact/**/*'
+    - if: $PACT_ENABLED == "true" && $PACT_BROKER_BASE_URL && $CI_COMMIT_BRANCH == "develop" && $CI_JOB_TRIGGERED != "true"
       variables:
         DEPLOY_ENV: development
 
 can-i-deploy_integration:
   extends: .can-i-deploy
   rules:
-    - if: $CI_COMMIT_BRANCH == "master" && $CI_COMMIT_TAG == null && $CI_JOB_TRIGGERED != "true" && $PACT_BROKER_BASE_URL && $PACT_ENABLED == 'true'
-      changes:
-        - '__tests__/pact/**/*'
+    - if: $PACT_ENABLED == "true" && $PACT_BROKER_BASE_URL && $CI_COMMIT_BRANCH == "master" && $CI_JOB_TRIGGERED != "true"
       variables:
         DEPLOY_ENV: integration
 
 can-i-deploy_production:
   extends: .can-i-deploy
   rules:
-    - if: $CI_COMMIT_BRANCH == "master" && $CI_COMMIT_TAG && $CI_JOB_TRIGGERED != "true" && $PACT_BROKER_BASE_URL && $PACT_ENABLED == 'true'
-      changes:
-        - '__tests__/pact/**/*'
+    - if: $PACT_ENABLED == "true" && $PACT_BROKER_BASE_URL && $CI_COMMIT_TAG && $CI_JOB_TRIGGERED != "true"
       variables:
         DEPLOY_ENV: production
 
@@ -318,9 +283,7 @@ rollback_production:
 create-version-tag_development:
   extends: .create-version-tag
   rules:
-    - if: $CI_COMMIT_BRANCH == "develop" && $CI_JOB_TRIGGERED != "true" && $PACT_BROKER_BASE_URL && $PACT_ENABLED == 'true'
-      changes:
-        - '__tests__/pact/**/*'
+    - if: $PACT_ENABLED == "true" && $PACT_BROKER_BASE_URL && $CI_COMMIT_BRANCH == "develop" && $CI_JOB_TRIGGERED != "true"
   script:
     - >
       docker run --rm
@@ -335,9 +298,7 @@ create-version-tag_development:
 create-version-tag_integration:
   extends: .create-version-tag
   rules:
-    - if: $CI_COMMIT_BRANCH == "master" && $CI_JOB_TRIGGERED != "true" && $PACT_BROKER_BASE_URL && $PACT_ENABLED == 'true'
-      changes:
-        - '__tests__/pact/**/*'
+    - if: $PACT_ENABLED == "true" && $PACT_BROKER_BASE_URL && $CI_COMMIT_BRANCH == "master" && $CI_JOB_TRIGGERED != "true"
   script:
     - >
       docker run --rm
@@ -352,9 +313,7 @@ create-version-tag_integration:
 create-version-tag_production:
   extends: .create-version-tag
   rules:
-    - if: $CI_COMMIT_TAG && $CI_JOB_TRIGGERED != "true" && $PACT_BROKER_BASE_URL && $PACT_ENABLED == 'true'
-      changes:
-        - '__tests__/pact/**/*'
+    - if: $PACT_ENABLED == "true" && $PACT_BROKER_BASE_URL && $CI_COMMIT_TAG && $CI_JOB_TRIGGERED != "true"
   script:
     - >
       docker run --rm
@@ -384,7 +343,7 @@ create-version-tag_production:
 sentry_success_development:
   extends: .sentry_deploy_success
   rules:
-    - if: $CI_COMMIT_BRANCH == "develop" && $CI_JOB_TRIGGERED != "true" && $SENTRY_DSN
+    - if: $SENTRY_DSN && $CI_COMMIT_BRANCH == "develop" && $CI_JOB_TRIGGERED != "true"
       when: on_success
       variables:
         SENTRY_ENV: Development
@@ -392,7 +351,7 @@ sentry_success_development:
 sentry_success_integration:
   extends: .sentry_deploy_success
   rules:
-    - if: $CI_COMMIT_BRANCH == "master" && $CI_JOB_TRIGGERED != "true" && $SENTRY_DSN
+    - if: $SENTRY_DSN && $CI_COMMIT_BRANCH == "master" && $CI_JOB_TRIGGERED != "true"
       when: on_success
       variables:
         SENTRY_ENV: Integration
@@ -400,7 +359,7 @@ sentry_success_integration:
 sentry_success_production:
   extends: .sentry_deploy_success
   rules:
-    - if: $CI_COMMIT_TAG && $CI_JOB_TRIGGERED != "true" && $SENTRY_DSN
+    - if: $SENTRY_DSN && $CI_COMMIT_TAG && $CI_JOB_TRIGGERED != "true"
       when: on_success
       variables:
         SENTRY_ENV: Production
@@ -422,7 +381,7 @@ sentry_success_production:
 sentry_failure_development:
   extends: .sentry_deploy_failure
   rules:
-    - if: $CI_COMMIT_BRANCH == "develop" && $CI_JOB_TRIGGERED != "true" && $SENTRY_DSN
+    - if: $SENTRY_DSN && $CI_COMMIT_BRANCH == "develop" && $CI_JOB_TRIGGERED != "true"
       when: on_failure
       variables:
         SENTRY_ENV: Development
@@ -430,7 +389,7 @@ sentry_failure_development:
 sentry_failure_integration:
   extends: .sentry_deploy_failure
   rules:
-    - if: $CI_COMMIT_BRANCH == "master" && $CI_JOB_TRIGGERED != "true" && $SENTRY_DSN
+    - if: $SENTRY_DSN && $CI_COMMIT_BRANCH == "master" && $CI_JOB_TRIGGERED != "true"
       when: on_failure
       variables:
         SENTRY_ENV: Integration
@@ -438,7 +397,7 @@ sentry_failure_integration:
 sentry_failure_production:
   extends: .sentry_deploy_failure
   rules:
-    - if: $CI_COMMIT_TAG && $CI_JOB_TRIGGERED != "true" && $SENTRY_DSN
+    - if: $SENTRY_DSN && $CI_COMMIT_TAG && $CI_JOB_TRIGGERED != "true"
       when: on_failure
       variables:
         SENTRY_ENV: Production
