--- a/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
@@ -220,12 +220,12 @@ build:
       -e CI_JOB_TOKEN
       -e TF_ADDRESS=${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/terraform/state/{{cookiecutter.project_slug}}-${ENVIRONMENT_SLUG}
       -e TF_ROOT
-      -e TF_VAR_api_url
       -e TF_VAR_digitalocean_cluster_name="${DIGITALOCEAN_CLUSTER_NAME}"
       -e TF_VAR_digitalocean_token="${DIGITALOCEAN_TOKEN}"
       -e TF_VAR_environment="${CI_ENVIRONMENT_NAME}"
-      -e TF_VAR_project_description
+      -e TF_VAR_internal_api_url="${INTERNAL_API_URL}"
       -e TF_VAR_project_domain="${DOMAIN}"
+      -e TF_VAR_project_protocol="${PROTOCOL}"
       -e TF_VAR_service_container_image
       -e TF_VAR_service_container_port
       -e TF_VAR_service_replicas
