--- a/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
@@ -11,9 +11,9 @@ stages:
 variables:
   COMPOSE_DOCKER_CLI_BUILD: 1
   DOCKER_BUILDKIT: 1
-  PACT_CONSUMER_NAME: {{ cookiecutter.project_slug }}-frontend
+  PACT_CONSUMER_NAME: {{ cookiecutter.project_slug }}-{{ cookiecutter.service_slug }}
   SENTRY_ORG: $SENTRY_ORG
-  SENTRY_PROJECT_NAME: {{ cookiecutter.project_slug }}-frontend
+  SENTRY_PROJECT_NAME: {{ cookiecutter.project_slug }}-{{ cookiecutter.service_slug }}
   SENTRY_URL:  $SENTRY_URL
   VERSION_BEFORE_REF: $CI_COMMIT_BEFORE_SHA
   VERSION_REF: $CI_COMMIT_SHA
@@ -51,22 +51,22 @@ test:
   services:
     - docker:20-dind
   variables:
-    FRONTEND_IMAGE_NAME: "gitlabci_{{ cookiecutter.project_slug }}_frontend"
-    FRONTEND_IMAGE_TAG: "$CI_JOB_NAME-$CI_JOB_ID"
-    FRONTEND_CONTAINER_NAME: "${CI_PROJECT_PATH_SLUG}-${CI_JOB_NAME}-${CI_JOB_ID}_frontend"
+    SERVICE_IMAGE_NAME: "gitlabci_{{ cookiecutter.project_slug }}_{{ cookiecutter.service_slug }}"
+    SERVICE_IMAGE_TAG: "$CI_JOB_NAME-$CI_JOB_ID"
+    SERVICE_CONTAINER_NAME: "${CI_PROJECT_PATH_SLUG}-${CI_JOB_NAME}-${CI_JOB_ID}_{{ cookiecutter.service_slug }}"
   script:
     - echo $CI_COMMIT_TAG $CI_COMMIT_BRANCH
     - >
       docker build
-      --tag=$FRONTEND_IMAGE_NAME:$FRONTEND_IMAGE_TAG
+      --tag=$SERVICE_IMAGE_NAME:$SERVICE_IMAGE_TAG
       --file=docker/remote.Dockerfile
       --target=test .
-    - docker run --name=$FRONTEND_CONTAINER_NAME $FRONTEND_IMAGE_NAME:$FRONTEND_IMAGE_TAG
-    - docker cp $FRONTEND_CONTAINER_NAME:/temp/coverage .
-    - if [ "$PACT_ENABLED" == true ]; then docker cp $FRONTEND_CONTAINER_NAME:/temp/__tests__/pacts .; fi
+    - docker run --name=$SERVICE_CONTAINER_NAME $SERVICE_IMAGE_NAME:$SERVICE_IMAGE_TAG
+    - docker cp $SERVICE_CONTAINER_NAME:/temp/coverage .
+    - if [ "$PACT_ENABLED" == true ]; then docker cp $SERVICE_CONTAINER_NAME:/temp/__tests__/pacts .; fi
   after_script:
-    - docker stop $FRONTEND_CONTAINER_NAME
-    - docker container rm $FRONTEND_CONTAINER_NAME
+    - docker stop $SERVICE_CONTAINER_NAME
+    - docker container rm $SERVICE_CONTAINER_NAME
   coverage: /All files[^|]*\|[^|]*\s+([\d\.]+)/
   artifacts:
     paths:
