--- a/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
@@ -224,7 +224,7 @@ build:
       -e TF_VAR_digitalocean_token="${DIGITALOCEAN_TOKEN}"
       -e TF_VAR_environment="${CI_ENVIRONMENT_NAME}"
       -e TF_VAR_internal_api_url="${INTERNAL_API_URL}"
-      -e TF_VAR_project_url="${PROJECT_URL}"
+      -e TF_VAR_project_url="${CI_ENVIRONMENT_URL}"
       -e TF_VAR_service_container_image
       -e TF_VAR_service_container_port
       -e TF_VAR_service_replicas
